# nestpath

./: PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nestpath/: __init__.py  core.py
tests/: test_core.py
